--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 	"permissions": ["https://www.facebook.com/"],
 	"browser_action": {
-		"default_icon": "icon.png",
+		"default_icon": "Icon_working.png",
 		"default_popup": "popup.html"
 	}
 }
